// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawingCanvas click_and_drag 1`] = `
<canvas
  data-snapshot-image="3f70bed6b2b659c6a38c93cf51e6b6774fbd642e7703650bf168a807d2ddf3183efd0d9a726e96b0821170289279ed96c9c88fe8ef8774f36ff6dfe8d1929169"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_multiple 1`] = `
<canvas
  data-snapshot-image="62d4773ef95fd6003f7ba6fcb72f6e115ce6ce9bd619321f0bd72d2f90979a66abe0f9197a64844ca3514109bf274e16092f495ea33a05011848bf9af98ace08"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_singular 1`] = `
<canvas
  data-snapshot-image="61dfe89fd77165441639f9b2eebad48b3f542ce1fa7ff569b7811bdd3c9f708bcd3f8c5f61b8fce3c553b202827e3004fae2d2aeb35b49c2fe0886a0122cc942"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;
